# AIDetective

./: .env.example  .gitignore  Assignment 5.docx  Assignment-5-Class-Relevant-Content.md  Assignment-5-Detective-Agent-System.md  CHANGELOG.md  CLAUDE.md  EVIDENCE_OVERVIEW.md  HKUST Canvas - Assignment 5 - Building a Detective Agent System.webloc  PRD-Assignment-5-Detective-Agent-System.md  README.md  REPORT.md  pyproject.toml  running_history.html
.agents/skills/find-skills/: SKILL.md
AIforDesign_CourseFiles/Labs/Week10/: Lab09_MultiAgent_and_Human_AI_Cooperation.ipynb
AIforDesign_CourseFiles/Labs/Week11/: Lab10_Skills_and_MCP.ipynb  design_mcp_server.py
AIforDesign_CourseFiles/Labs/Week2/: ISDN3150-Week2-Section2.ipynb  ISDN3150_Week2_Assignment.ipynb  ISDN3150_Week2_Section1.ipynb  ISDN3150_Week2_Section3.ipynb
AIforDesign_CourseFiles/Labs/Week4/: Week 4 Lab worksheet.docx
AIforDesign_CourseFiles/Labs/Week5/: Week5-Lab-worksheet.docx
AIforDesign_CourseFiles/Labs/Week6/: 05_streamlit_setting_with_chatbox.ipynb  06_streamlit_setting.ipynb  Week6-Lab-worksheet.docx
AIforDesign_CourseFiles/Labs/Week7/: 05_llm_exercise_course_advisor_new.ipynb  (+1 more)
Evidence/: drivers_license.json  facebook_event_checkin.json  get_fit_now_check_in.json  get_fit_now_member.json  income.json  interview.json  person.json
src/detective/: __init__.py  agent.py  data.py  evaluator.py  logger.py  main.py  multi_agent.py  multi_main.py  prompts.py  rag.py  tools.py
tests/: test_agent_offline.py  test_data.py  test_multi_agent_offline.py  test_rag.py  test_tools.py
(+10 files in other folders)
