[project]
name = "detective"
version = "0.1.0"
description = "HKUST AI for Design Assignment 5 — grounded LLM detective agent."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
